--- a/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
+++ b/content/post/2020-06-12-checkiing-up-on-american-funds-performance-through-cycle.Rmd
@@ -47,23 +47,23 @@ As usual, Redwall would like to avoid defending to any particular viewpoint othe
 
 During the 2000 bear market, Redwall put substantial research into its investment strategy, and concluded that the American Funds group had a competitive advantage over other mutual fund groups. Capital Group, the operator of the American Funds, was founded at the beginning of the Great Depression in 1932. Anyone working in the front office Wall Street will know Capital Group well, but few outside will have heard of them. It had a large group of very experienced managers sitting in different locations around the world, with varied perspectives, owning a heavy component of their own funds, with each investing in concentrated portfolio of their own highest conviction ideas for the long term. If the style of one manager was out of sync with the current flavor of the market, others might pick up the pace. The cost of research could be leveraged over a much larger asset base than most mutual funds while still keeping running costs at a manageable level. Being one of the largest managers, analysts and managers would always have access to the best information and advice.
 
-Investments were made mostly in the 2001-2003 bear market period, with dollar-cost averaging across a group of funds designed to be diversified across regions and investment styles. The investments were made without paying the loads, rightly mentioned in the Asset Builder article, as a potential drag on returns. In this article, we will download the weekly closing prices of the relevant American Funds and comparable Vanguard Funds, re-construct our portfolio and estimate the corresponding weighting of different asset classes, replicate a relevant benchmark portfolio of Vanguard index funds, and explore their relative performance histories over the period to try to square the two perspectives. 
+Investments were made mostly in the 2001-2003 bear market period, with dollar-cost averaging across a group of funds designed to be diversified across regions and investment styles. The investments were made without paying the loads, rightly mentioned in the Asset Builder article, as a potential drag on returns. In this article, we will download the weekly closing prices of the relevant American Funds and the most comparable Vanguard Funds, re-construct our portfolio and estimate the corresponding weighting of different asset classes, replicate a relevant benchmark portfolio of Vanguard index funds, and explore their relative performance histories over the period to try to square the two perspectives. 
 
 
 # Description of American Funds Held
 
-The American Funds don't fit well into the traditional Morningstar investment categories. By in large, its portfolios are many times larger than other active funds, and mostly stick to the largest of the large capitalization global stocks. Washington Mutual mostly owns US mega caps value stocks and holds no cash, while Amcap often moves down the market capitalization spectrum a bit with growth stocks, and will hold a substantial amount of cash. Capital Income builder has a high mix of US and overseas stocks which pay high dividends with room to grow. Income Fund of America is similar to Capital Income builder, but has a more US oriented mix and takes more credit risk. Capital World Growth and Income is like Washington Mutual in its stock selection, but will hold a small amount of credit at times when it makes more sense than the equity. New Perspective owns the largest multinational companies domiciled in the US and around the world, but have acquired the competency to expand across borders. 
+The American Funds don't fit well into the traditional Morningstar investment categories. By in large, its portfolios are many times larger than other active funds, and mostly stick to the largest of the large capitalization global stocks. Washington Mutual mostly owns US mega caps value stocks and holds no cash, while Amcap often moves down the market capitalization spectrum a bit with growth stocks, and will hold a substantial amount of cash. Capital Income builder has a mix of US and overseas stocks which pay high dividends with room to grow. Income Fund of America is similar to Capital Income builder, but has a more US oriented mix and takes more credit risk. Capital World Growth and Income is like Washington Mutual in its stock selection, but will hold a small amount of credit at times when it makes more sense than the equity. New Perspective owns the largest multinational companies domiciled in the US and around the world, but have acquired the competency to expand across borders. 
 
 # New Geography of Investing
 
-It was probably from operating New Perspective, which has a large majority of the revenue of portfolio companies coming from of their country of domicile, that led American Funds to discover a new way of looking at its portfolios. In the [New Geography of Investing](https://www.capitalgroup.com/advisor/ca/en/insights/content/videos/new-geography-of-investing-new-breed.html) campaign launched in 2016, they do an excellent job of explaining this concept. In addition to the country of domicile, they now disclose the geographic mix of revenues of all of their portfolios on their website, and explain clearly that it doesn't prioritize fitting its portfolios into Morningstar regional boxes at the expense of finding the best investments. 
+It was probably from operating New Perspective, which was set up to own companies which have a majority of revenues of coming from outside of their country of domicile, which led American Funds to discover a new way of looking at its portfolios. In the [New Geography of Investing](https://www.capitalgroup.com/content/dam/cgc/tenants/canada/pdf/en/public/NewGeographyOfInvesting.pdf) campaign launched in 2016, they do an excellent job of explaining this concept. In addition to the country of domicile, they now disclose the geographic mix of revenues of all of their portfolios on their website, and explain clearly that it doesn't prioritize fitting its portfolios into Morningstar regional boxes at the expense of finding the best investments. 
 
 
 # Geography of Vanguard Benchmark Portfolio
 
 We believe that the flaw in Asset Builder's analysis was comparing the funds to the Vanguard Total Market Index fund, which has 25% of its components in smaller and mid-cap companies. The average market capitalization of American Fund holdings is likely to be considerably higher, and the percentage of non-US holdings, much lower than the benchmark used. US listed companies have performed considerably better than overseas stocks since the GFC, and the slow and steady bull \$ bull market has consistently eaten into returns from holding overseas assets. The performance of smaller and mid-sized companies has also been better than largest over the recent period, and American Funds group can't really invest meaningfully here at its scale, nor did we "hire" them to do so. 
 
-As shown below, we are comparing our portfolio to 54.5% of the S&P index. The S&P has an average market capitalization almost twice as large as the Total Market Index, and we believe is more comparable to market capitalization of holdings of the American Funds. Given the size of the funds, we don't expect American Funds to own smaller companies. Although we believe the smallcap component is about 5%, we prefer to get the bulk of our small and mid-cap exposure though the Vanguard Extended Market Index fund (which invests in the other 3,000 US stocks or 25% of US market capitalization not in the S&P index). We are also including 24.5% of our benchmark in non-US stocks based on our weightings shown in the matrix below. 
+As shown below, we are comparing our portfolio to 54.5% of the S&P index. The S&P has an average market capitalization almost twice as large as the Total Market Index, and we believe is more comparable to market capitalization of holdings of the American Funds. Given the size of the funds, we don't expect American Funds to own smaller companies. Although we believe the small-cap component is about 5%, we prefer to get the bulk of our small and mid-cap exposure though the Vanguard Extended Market Index fund (which invests in the other 3,000 US stocks or 25% of US market capitalization not in the S&P index). We are also including 24.5% of our benchmark in non-US stocks based on our weightings shown in the matrix below. 
 
 
 ```{r 'benchmark-matrix', echo=TRUE, message=FALSE, warning=FALSE}
@@ -107,7 +107,7 @@ American funds also run with a higher amount of cash than index funds, as can be
 
 We would also add another thought at odds with conventional thinking. Many mutual fund investors redeem their funds at the exact worst moments. Buying at the top and selling at the bottom can be seen over and over in retail and possibly institutional mutual fund flows at considerable cost to holders. This also forces managers to sell when they should be buying, in effect contributing to the poor performance of active managers. Many American Fund investors paid hefty loads representing a sunk cost, and on-going 12-b1 fees to provide incentive to their advisers to hold their hands during the inevitable scary moments. The negative aspects of fees and agency problems are often discussed, but measuring the cost of not selling at the wrong time is much more difficult.
 
-Coupled with extra cash buffer, American Fund managers may afford themselves greater flexibility to not sell or even to buy at challenging moments. This is in no way to advocate for the current fee structure, just that some of the DIY index only advice we hear from sites like Asset Builder may not fully take into account the actual behavior of real people who are not investment professionals. Some portion of those seemingly high investment costs may pay for themselves when done right. So far, we haven't seen much study on the contrafactual of how advised investors fare relative to DIY through a bear market.
+Coupled with extra cash buffer, American Fund may have greater flexibility to not sell or even to buy at challenging moments. This is in no way to advocate for the current fee structure, just that some of the DIY index only advice we hear from sites like Asset Builder may not fully take into account the actual behavior of real people who are not investment professionals. Some portion of those seemingly high investment costs may pay for themselves when done right. So far, we haven't seen much study on the contrafactual of how advised investors fare relative to DIY through a bear market.
 
 
 # Download Raw Weekly Mutual Fund Price Data with Quantmod
@@ -281,7 +281,7 @@ charts.RollingPerformance(fund_returns_df[, c(3:4, 14)],
 
 Morningstar came up with the ideas of mutual fund Star Ratings in 1985 to compare funds across broadly defined categories. They took it a step further, they created investment style and regional boxes in 1992, which all made sense at the time. Just like other report cards though, investors began to try to game the system by moving funds among categories, launching and merging funds when advantageous, and creating incentives for managers chasing quarterly or calendar year returns. It doesn't seem to make a lot of sense now make decisions about manager skill over any particular year or group of years when it is possible to break a fund into weekly performance, and build new benchmarks all in a matter of a day or two, as we have done in this analysis.
 
-It is easily possible to extract all periods to see how persistently or not a fund has out-performed. American Fund itself did an analysis along these lines last year [The Select Investment Scorecard](https://www.capitalgroup.com/advisor/insights/the-capital-advantage/select-investment-scorecard.html), but unfortunately hasn't updated or made the data available for others to reproduce, though a quick glance at the methodology, it seemed robust. It is hard to understand why Morningstar wouldn't want to improve its measurement process along these lines.
+It is easily possible to extract all periods to see how persistently or not a fund has out-performed. American Fund itself did an analysis along these lines last year [The Select Investment Scorecard](https://www.capitalgroup.com/individual/insights/the-capital-advantage/select-investment-scorecard.html), but unfortunately hasn't updated or made the data available for others to reproduce, though a quick glance at the methodology, it seemed robust. It is hard to understand why Morningstar wouldn't want to improve its measurement process along these lines.
 
 
 # Looking at Number of Weeks with Outperformance
